[gd_scene load_steps=4 format=3 uid="uid://dx8ppxu3urdnr"]

[ext_resource type="Script" path="res://level_manager.gd" id="1_k004m"]

[sub_resource type="LabelSettings" id="LabelSettings_ur8hi"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_vy22w"]
font_size = 20

[node name="LevelRoot" type="Node2D"]
script = ExtResource("1_k004m")

[node name="LevelNumber" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 534.5
offset_top = 83.0
offset_right = 619.5
offset_bottom = 111.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Level 10"
label_settings = SubResource("LabelSettings_ur8hi")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="LevelComplete" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 545.5
offset_top = 501.0
offset_right = 608.5
offset_bottom = 524.0
grow_horizontal = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_vy22w")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="LevelTransitionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="LevelTransitionTimer" to="." method="_on_level_transition_timer_timeout"]
